--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
+    "redis": "^4.0.1",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.4.0"
   }
 }
